# datafusion

./: Cargo.toml
datafusion-cli/src/: main.rs
flight-sql-client/: Cargo.toml
flight-sql-client/src/: main.rs
flight-sql-server/: Cargo.toml  README.md
flight-sql-server/src/: flight_server.rs  flight_sql_server.rs  main.rs
flight-sql-server/src/arrow/: flight_sql_server.rs
