[package]
name = "flight-sql-client"
description = "DataFusion Flight Sql Client"
version = "38.0.0"
authors = ["Apache DataFusion <dev@datafusion.apache.org>"]
edition = "2021"
keywords = ["arrow", "datafusion", "query", "sql"]
license = "Apache-2.0"
homepage = "https://datafusion.apache.org"
repository = "https://github.com/apache/datafusion"
# Specify MSRV here as `cargo msrv` doesn't support workspace version
rust-version = "1.73"
readme = "README.md"

[dependencies]
arrow = "51.0.0"
arrow-flight = { version = "51.0.0", features = ["flight-sql-experimental", "tls"]}
arrow-schema = "51.0.0"
async-trait = "0.1.41"
clap = { version = "3", features = ["derive", "cargo"] }
datafusion = { path = "../datafusion/core", version = "38.0.0", features = [
    "avro",
    "crypto_expressions",
    "datetime_expressions",
    "encoding_expressions",
    "parquet",
    "regex_expressions",
    "unicode_expressions",
    "compression",
] }
dirs = "4.0.0"
env_logger = "0.9"
futures = "0.3"
mimalloc = { version = "0.1", default-features = false }
object_store = { version = "0.9.0", features = ["aws", "gcp", "http"] }
parking_lot = { version = "0.12" }
parquet = { version = "51.0.0", default-features = false }
regex = "1.8"
rustyline = "11.0"
tokio = { version = "1.24", features = ["macros", "rt", "rt-multi-thread", "sync", "parking_lot", "signal"] }
url = "2.2"
dashmap = "5.4.0"
log = "0.4.21"
prost = "0.12.4"
tonic = { version = "0.11.0"}
uuid = { version = "1.8.0", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2.0"
ctor = "0.2.0"
predicates = "3.0"
rstest = "0.17"
